add register endpoint
# Conflicts:
#	README.md
